Worked on Admin dashboard

--- a/activity_tracker/test/fixtures/patients.yml
+++ b/activity_tracker/test/fixtures/patients.yml
@@ -18,11 +18,11 @@
 #  name                          :string
 #  dob                           :string
 #  mrn                           :integer
-#  token_secret                  :string
 #  withings_token_key            :string
 #  withings_token_secret         :string
 #  withings_id                   :integer
 #  withings_request_token_secret :string
+#  withings_authorized           :boolean
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
